--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ body header .title h2 {
   font-weight: 500;
   color: #000;
   background: #fff000;
+  background: linear-gradient(0deg, #ffbf00, #fff000);
   padding: 0.5rem;
   border-radius: 0.5rem;
   text-transform: capitalize;
