--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,7 @@ body header .title h2 {
   width: 20rem;
   font-weight: 500;
   color: #000;
-  background: #fff000;
-  background: linear-gradient(0deg, #ffbf00, #fff000);
+  background: linear-gradient(0deg, #ffd500, #fff000);
   padding: 0.5rem;
   border-radius: 0.5rem;
   text-transform: capitalize;
