--- a/css/style.css
+++ b/css/style.css
@@ -69,68 +69,113 @@ main {
 @media (min-width: 768px) {
   main {
     column-gap: 5vw;
-    row-gap: 10vh;
+    row-gap: 20vh;
   }
 }
-main .project-container {
+
+.project-container {
   border-radius: 10px;
   position: relative;
 }
-main .project-container .project-item {
+.project-container .project-item {
   width: 100%;
   height: auto;
-  background: #333333;
+  background: #1a1a1a;
   padding: 1rem;
   border-radius: 0.25rem;
-  box-shadow: 0 0.5rem 0.65rem rgba(255, 255, 0, 0.05);
+  transition: 0.25s;
 }
 @media (min-width: 768px) {
-  main .project-container .project-item {
-    height: 400px;
+  .project-container .project-item {
+    height: 60vh;
   }
 }
-main .project-container .project-item h2 {
+.project-container .project-item h2 {
   text-transform: capitalize;
   color: yellow;
   margin: 1rem 0;
   font-size: 1.25rem;
   font-size: clamp(1.25rem, 2vw, 1.25rem);
 }
-main .project-container .project-item a {
+.project-container .project-item a {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 1rem 0;
   background: #000;
   background: linear-gradient(0deg, #000, #222);
+  box-shadow: 0 0.5rem 0.85rem rgba(255, 238, 0, 0.1);
   width: 11rem;
   color: #ffff;
   padding: 0.65rem 1rem;
   text-transform: capitalize;
   text-decoration: none;
   border-radius: 0.25rem;
+  transition: 0.25s;
 }
-main .project-container .project-item a i {
+.project-container .project-item a i {
   color: yellow;
+  transition: 0.25s;
 }
-main .project-container .project-item img {
-  border: 1px solid #fff899;
+.project-container .project-item a:hover {
+  transform: scale(0.98);
+  box-shadow: 0 0.25rem 0.45rem rgba(255, 238, 0, 0.25);
+}
+.project-container .project-item a:hover i {
+  transform: translateX(-0.25rem);
+  color: #cccc00;
+}
+.project-container .project-item figure {
+  height: 0;
+  height: 50vh;
+  transition: 0.5s;
+  position: relative;
+}
+.project-container .project-item figure::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 200px;
   height: 100%;
-  object-fit: cover;
-  object-fit: contain;
-  transition: 0.2s ease;
-  border-radius: 50%;
+  background: yellow;
+  opacity: 0;
   border-radius: 0.25rem;
   transition: 0.5s;
 }
+.project-container .project-item figure img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-fit: cover;
+  border-radius: 0.25rem;
+  transition: 0.5s;
+  transform: rotate(-10deg) scale(0.8);
+  box-shadow: 0rem 1rem 1rem rgba(255, 255, 0, 0.2);
+  box-shadow: 0rem 1rem 1rem rgba(0, 0, 0, 0.5);
+}
 @media (min-width: 768px) {
-  main .project-container .project-item img {
-    object-fit: cover;
-    width: 100%;
-    height: 60%;
-    object-position: top;
+  .project-container .project-item figure {
+    height: 40vh;
+  }
+  .project-container .project-item figure img {
+    transform: rotate(0);
+  }
+}
+.project-container .project-item:hover {
+  background: #333333;
+}
+.project-container .project-item:hover figure::before {
+  opacity: 0;
+}
+.project-container .project-item:hover figure img {
+  transform: rotate(0deg) scale(0.95);
+  box-shadow: 0rem 0.5rem 0.25rem rgba(255, 255, 0, 0.3);
+  box-shadow: 0rem 0.5rem 0.25rem rgba(0, 0, 0, 0.3);
+}
+@media (min-width: 768px) {
+  .project-container .project-item:hover figure {
+    height: 30vh;
   }
 }
 
