--- a/sass/style.scss
+++ b/sass/style.scss
@@ -69,106 +69,168 @@ main {
     align-items: center;
     gap: 10vh;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+
     @media (min-width: 768px) {
         // gap: 2rem;
         column-gap: 5vw;
-        row-gap: 10vh;
+        row-gap: 20vh;
     }
-    .project-container {
-        // background-color: orange;
-        // border: 2px solid blue;
-        border-radius: 10px;
-        // height: 350px;
-        position: relative;
+}
 
-        .project-item {
-            // border: 3px solid red;
-            width: 100%;
-            height: auto;
-            background: hsl(0, 0%, 20%);
-            padding: 1rem;
-            // text-align: center;
+.project-container {
+    // background-color: orange;
+    // border: 2px solid blue;
+    border-radius: 10px;
+    // height: 350px;
+    position: relative;
+
+    .project-item {
+        // border: 3px solid red;
+        width: 100%;
+        height: auto;
+        background: hsl(0, 0%, 10%);
+        padding: 1rem;
+        // border-bottom: 4px solid yellow;
+        // text-align: center;
+        border-radius: .25rem;
+        // box-shadow: 0 .5rem .5rem #0004;
+        // box-shadow: 0 .5rem .65rem hsla(60, 100%, 50%, .05);
+        transition: .25s;
+
+        @media (min-width: 768px) {
+            height: 60vh;
+        }
+
+        h2 {
+            text-transform: capitalize;
+            // margin-bottom: 1rem;
+            color: yellow;
+            margin: 1rem 0;
+            font-size: 1.25rem;
+            font-size: clamp(1.25rem, 2vw, 1.25rem);
+            // text-decoration: underline 2px solid yellow;
+        }
+
+        a {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 1rem 0;
+            background: #000;
+            background: linear-gradient(0deg, #000, #222);
+            box-shadow: 0 .5rem .85rem hsla(56, 100%, 50%, .1);
+            width: 11rem;
+            color: #ffff;
+            padding: .65rem 1rem;
+            text-transform: capitalize;
+            text-decoration: none;
             border-radius: .25rem;
-            // box-shadow: 0 .5rem .5rem #0004;
-            box-shadow: 0 .5rem .65rem hsla(60, 100%, 50%, .05);
-            @media (min-width: 768px) {
-                height: 400px;
-            }
-            h2 {
-                text-transform: capitalize;
-                // margin-bottom: 1rem;
+            transition: .25s;
+
+            i {
                 color: yellow;
-                margin: 1rem 0;
-                font-size: 1.25rem;
-                font-size: clamp(1.25rem, 2vw, 1.25rem);
-                // text-decoration: underline 2px solid yellow;
+                transition: .25s;
             }
 
-            a {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                margin: 1rem 0;
-                background: #000;
-                background: linear-gradient(0deg, #000, #222);
-                width: 11rem;
-                color: #ffff;
-                padding: .65rem 1rem;
-                text-transform: capitalize;
-                text-decoration: none;
-                border-radius: .25rem;
-
+            &:hover {
+                transform: scale(.98);
+                box-shadow: 0 .25rem .45rem hsla(56, 100%, 50%, .25);
                 i {
-                    color: yellow;
+                    transform: translateX(-.25rem);
+                    color: hsl(60, 100%, 40%);
                 }
             }
+        }
 
-            img {
-                border: 1px solid hsl(56, 100%, 80%);
+        figure {
+            // border: 2px solid yellow;
+            height: 0;
+            height: 50vh;
+            transition: .5s;
+            position: relative;
+            // overflow: hidden;
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
                 width: 100%;
-                height: 200px;
                 height: 100%;
-                object-fit: cover;
-                object-fit: contain;
-                transition: .2s ease;
-                border-radius: 50%;
+                background: yellow;
+                opacity: 0;
                 border-radius: .25rem;
                 transition: .5s;
+            }
+            img {
+                // border: 1px solid hsl(56, 100%, 80%);
+                width: 100%;
+                // height: 200px;
+                height: 100%;
+                object-fit: contain;
+                object-fit: cover;
+                border-radius: .25rem;
+                transition: .5s;
+                transform: rotate(-10deg) scale(.8);
+                box-shadow: 0rem 1rem 1rem hsla(60, 100%, 50%, .2);
+                box-shadow: 0rem 1rem 1rem hsla(0, 0%, 0%, .5);
                 @media (min-width: 768px) {
-                    object-fit: cover;
-                    width: 100%;
-                    height: 60%;
-                    object-position: top;
+                    // object-fit: cover;
+                    // width: 100%;
+                    // height: 60%;
+                    // object-position: top;
                 }
             }
+            @media (min-width: 768px){
+                    height: 40vh;
+                    img {
+                        transform: rotate(0);
+                    }
+            }
+        }
 
-            // &:hover {
-            //     img {
-            //         height: 300px;
-            //     }
-            // }
+        &:hover {
+            background: hsl(0, 0%, 20%);
+            figure {
+                // height: 50vh;
+                &::before {opacity: 0;}
+                img {
+                    transform: rotate(0deg) scale(.95);
+                    box-shadow: 0rem .5rem .25rem hsla(60, 100%, 50%, .3);
+                    box-shadow: 0rem .5rem .25rem hsla(0, 0, 0, .3);
+                }
+
+            }
+            @media (min-width: 768px){
+                // height: 60vh;
+                figure {
+                    height: 30vh;
+                    img {
+                        // transform: rotate(0deg) scale(1.15);
+                    }
+                }
+            }
         }
     }
 }
 
-    footer {
-        padding: 5vh 0;
-        font-size: 1.5rem;
-        color: #fff;
-        background-color: #000;
-        font-weight: 400;
-        text-transform: capitalize;
-        text-align: center;
+footer {
+    padding: 5vh 0;
+    font-size: 1.5rem;
+    color: #fff;
+    background-color: #000;
+    font-weight: 400;
+    text-transform: capitalize;
+    text-align: center;
 
-        a {
-            color: #fff000;
-            text-decoration: none;
-        }
-
-        @media (max-width: 768px) {
-            font-size: 1rem;
-        }
+    a {
+        color: #fff000;
+        text-decoration: none;
     }
+
+    @media (max-width: 768px) {
+        font-size: 1rem;
+    }
+}
 
 
 .loader_bg {
